--- a/resources/sass/front/style.css
+++ b/resources/sass/front/style.css
@@ -166,7 +166,7 @@ p.terms_text01 {
     width: 60%;
     display: block;
     margin: 14px auto;
-    line-height: 27px; 
+    line-height: 27px;
 }
 
 .conting ul {
@@ -185,7 +185,7 @@ p.terms_text01 {
     visibility: visible;
     opacity:1;
     transform: translateY(0px);transition:.5s ease all;
-    
+
 }
 
 
@@ -214,4 +214,19 @@ p.terms_text01 {
 
 .m-tb-15{
         margin: 15px 0;
+}
+
+.btn-normal {
+    font-size: 14px;
+    padding: 18px 45px;
+    font-weight: 700;
+    color: #fff !important;
+    background-color: #ff6000 !important;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    display: inline-block;
+    line-height: 1;
+    border-radius: 0;
+    letter-spacing: 0.05em;
 }
